# my-girok

./: .dockerignore  .env.example  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_REVIEW_PR_575.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MIGRATION_V6.md  README.md  docker-compose.yml.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.json  turbo.json
.ai/: CHANGELOG.md  README.md  architecture.md  authorization.md  best-practices.md  caching.md  ci-cd.md  data-migration.md  database.md  design-system-principles.md  docker-deployment.md  git-flow.md  health-check.md  helm-deployment.md  i18n-locale.md  manifest.yaml  otel.md  project-setup.md  pull-requests.md  resume.md  rules.md  ssot.md  testing.md  user-preferences.md  user-schema.md
.github/: .rebuild-trigger  GITOPS_SETUP.md
.specs/: README.md
.tasks/: CURRENT_FOCUS.md  MASTER_PROJECT_PLAN.md  PHASE4_PHASE8_CHECKLIST.md  POST_PHASE3_P3_CLICKHOUSE_KAFKA.md  POST_PHASE3_P4_VERIFICATION.md  PROGRESS.md  README.md  WEB_ADMIN_RECOVERY_PLAN.md
docs/: ARCHITECTURE_ROADMAP.md  CI_CD.md  CONSOLIDATION_SUMMARY.md  DATABASE.md  DATABASE_NAMING_CONVENTION.md  DESIGN_SYSTEM.md  DOCKER_DEPLOYMENT.md  I18N.md  README.md  TEST_COVERAGE.md  WORK_SUMMARY.md  test-coverage.md
services/gateway/api-gateway/: .env.example  Cargo.toml  Dockerfile
services/gateway/api-gateway/helm/: Chart.yaml  README.md  values.yaml.example
services/gateway/api-gateway/helm/templates/: _helpers.tpl  deployment.yaml
services/gateway/api-gateway/src/: config.rs  error.rs  main.rs
services/gateway/api-gateway/src/auth/: mod.rs
services/gateway/api-gateway/src/middleware/: mod.rs  request_context.rs
services/gateway/api-gateway/src/observability/: metrics.rs  mod.rs  tracing.rs
services/gateway/api-gateway/src/proxy/: mod.rs
services/gateway/api-gateway/src/routes/: health.rs  metrics.rs  mod.rs
(+2451 files in other folders)
