[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Beegy Labs <beegy.net@gmail.com>"]
description = "High-performance API Gateway for my-girok platform"
license = "MIT"
repository = "https://github.com/beegy-labs/my-girok"

[dependencies]
# Async Runtime & Web Framework
tokio = { version = "1.43", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "request-id", "compression-gzip"] }

# HTTP Client (for reverse proxy)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# JWT Authentication
jsonwebtoken = "9"

# Rate Limiting
governor = "0.7"

# Observability
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1.20"
regex-lite = "0.1"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
